--- a/mapa1_knjiz/index1.html
+++ b/mapa1_knjiz/index1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
@@ -11,22 +12,22 @@
 
 <body>
   <div id="head">
-    <h1>Odaberite jednu od opcija!</h1>
+    <h1>Lokacije Knjižnica Grada Zagrebu</h1>
   </div>
   <div id="map">
   </div>
   <div id="nav">
     <ul>
-      <li><a href="mapa1_knjiz/index1.html"><i class="fa-solid fa-book fa-2xl"></i></a></li>
-      <li><a href="mapa2_wifi/index2.html"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
-      <li><a href="mapa3_bike/index3.html"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
-      <li><a href="mapa4_graf/index4.html"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
+      <li><a href="index1.html"><i class="fa-solid fa-book fa-2xl"></i></a></li>
+      <li><a href="../mapa2_wifi/index2.html"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
+      <li><a href="../mapa3_bike/index3.html"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
+      <li><a href="../mapa4_graf/index4.html"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
     </ul>
   </div>
 </body>
 <script
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuCPSHT2VD5qiKl2YV1kGWH2bMqZRQaZQ&callback=initMap&v=weekly"
   defer></script>
-<script src="script.js"></script>
+<script src="script1.js"></script>
 
 </html>
