--- a/mapa1_knjiz/index1.html
+++ b/mapa1_knjiz/index1.html
@@ -18,7 +18,7 @@
   </div>
   <div id="nav">
     <ul>
-      <li><a href="index1.html"><i class="fa-solid fa-book fa-2xl"></i></a></li>
+      <li><a href="index1.html" style="background-color: #0AD055;"><i class="fa-solid fa-book fa-2xl"></i></a></li>
       <li><a href="../mapa2_wifi/index2.html"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
       <li><a href="../mapa3_bike/index3.html"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
       <li><a href="../mapa4_graf/index4.html"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
