--- a/mapa3_bike/index3.html
+++ b/mapa3_bike/index3.html
@@ -19,7 +19,7 @@
     <ul>
       <li><a href="../mapa1_knjiz/index1.html"><i class="fa-solid fa-book fa-2xl"></i></a></li>
       <li><a href="../mapa2_wifi/index2.html"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
-      <li><a href="index3.html"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
+      <li><a href="index3.html" style="background-color: #E5261F;"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
       <li><a href="../mapa4_graf/index4.html"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
     </ul>
   </div>
