--- a/mapa4_graf/index4.html
+++ b/mapa4_graf/index4.html
@@ -20,7 +20,7 @@
       <li><a href="../mapa1_knjiz/index1.html"><i class="fa-solid fa-book fa-2xl"></i></a></li>
       <li><a href="../mapa2_wifi/index2.html"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
       <li><a href="../mapa3_bike/index3.html"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
-      <li><a href="index4.html"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
+      <li ><a href="index4.html"  style="background-color: #FFCF1D;"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
     </ul>
   </div>
 </body>
