--- a/mapa2_wifi/index2.html
+++ b/mapa2_wifi/index2.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="head">
-    <h1>Bestplatne WIFI pristupne točke Grada Zagreba</h1>
+    <h1>Bestplatni WIFI Grada Zagreba</h1>
   </div>
   <div id="map">
   </div>
