--- a/mapa3_bike/index3.html
+++ b/mapa3_bike/index3.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="head">
-    <h1>Lokacije Parkinga Za Bicikle u Zagrebu</h1>
+    <h1>Parkinga Za Bicikle u Zagrebu</h1>
   </div>
   <div id="map">
   </div>
