--- a/mapa3_bike/index3.html
+++ b/mapa3_bike/index3.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Parkinga Za Bicikle u Zagrebu</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
 </head>
