--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Lokacije</title>
 
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
-  <link rel="shortcut icon" href="favicon.ico"/>
+  <script src="https://kit.fontawesome.com/1c5 108fa97.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 
 <body>
