--- a/mapa1_knjiz/index1.html
+++ b/mapa1_knjiz/index1.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lokacije Knjižnica Grada Zagrebu</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
   <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
 </head>
 
