--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lokacije</title>
-
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <script src="https://kit.fontawesome.com/1c5 108fa97.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+  <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
