--- a/mapa3_bike/index3.html
+++ b/mapa3_bike/index3.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Parkinga Za Bicikle u Zagrebu</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
   <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
 </head>
 
