changed file locations

--- a/mapa3_bike/index3.html
+++ b/mapa3_bike/index3.html
@@ -2,16 +2,17 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Parkinga Za Bicikle u Zagrebu</title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" type="text/css" href="../style.css" />
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
   <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div id="head">
+  <div class="head" id="head_lokacija_3">
     <h1>Parkinga Za Bicikle u Zagrebu</h1>
   </div>
   <div id="map">
