--- a/mapa1_knjiz/index1.html
+++ b/mapa1_knjiz/index1.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lokacije Knjižnica Grada Zagrebu</title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" type="text/css" href="../style.css" />
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
   <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div id="head">
+  <div class="head" id="head_lokacija_1">
     <h1>Lokacije Knjižnica Grada Zagrebu</h1>
   </div>
   <div id="map">
