--- a/mapa2_wifi/index2.html
+++ b/mapa2_wifi/index2.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bestplatni WIFI Grada Zagreba</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
-    <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bestplatni WIFI Grada Zagreba</title>
+  <link rel="stylesheet" type="text/css" href="../style.css" />
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+  <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
+</head>
 
 <body>
-  <div id="head">
+  <div class="head" id="head_lokacija_2">
     <h1>Bestplatni WIFI Grada Zagreba</h1>
   </div>
   <div id="map">
