--- a/mapa4_graf/index4.html
+++ b/mapa4_graf/index4.html
@@ -2,16 +2,17 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lokacije Grafita u Zagrebu</title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" type="text/css" href="../style.css" />
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
   <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div id="head">
+  <div class="head" id="head_lokacija_4">
     <h1>Lokacije Grafita u Zagrebu</h1>
   </div>
   <div id="map">
@@ -21,7 +22,7 @@
       <li><a href="../mapa1_knjiz/index1.html"><i class="fa-solid fa-book fa-2xl"></i></a></li>
       <li><a href="../mapa2_wifi/index2.html"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
       <li><a href="../mapa3_bike/index3.html"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
-      <li ><a href="index4.html"  style="background-color: #FFCF1D;"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
+      <li><a href="index4.html" style="background-color: #FFCF1D;"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
     </ul>
   </div>
 </body>
