--- a/mapa4_graf/index4.html
+++ b/mapa4_graf/index4.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lokacije Grafita u Zagrebu</title>
+  <title>Lokacije Grafita Grada Zagreba</title>
   <link rel="stylesheet" type="text/css" href="../style.css" />
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
   <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
@@ -13,16 +13,16 @@
 
 <body>
   <div class="head" id="head_lokacija_4">
-    <h1>Lokacije Grafita u Zagrebu</h1>
+    <h1>Lokacije Grafita Grada Zagreba</h1>
   </div>
   <div id="map">
   </div>
   <div id="nav">
     <ul>
-      <li><a href="../mapa1_knjiz/index1.html"><i class="fa-solid fa-book fa-2xl"></i></a></li>
-      <li><a href="../mapa2_wifi/index2.html"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
-      <li><a href="../mapa3_bike/index3.html"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
-      <li><a href="index4.html" style="background-color: #FFCF1D;"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
+      <li><a href="../mapa1_knjiz/index1.html" title="Lokacije Knjižnica Grada Zagreba" ><i class="fa-solid fa-book fa-2xl"></i></a></li>
+      <li><a href="../mapa2_wifi/index2.html" title="Bestplatan WIFI Grada Zagreba"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
+      <li><a href="../mapa3_bike/index3.html" title="Parking Za Bicikle Grada Zagreba"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
+      <li><a href="index4.html" style="background-color: #FFCF1D;" title="Lokacije Grafita Grada Zagreba"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
     </ul>
   </div>
 </body>
