from head to header

--- a/mapa1_knjiz/index1.html
+++ b/mapa1_knjiz/index1.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="head" id="head_lokacija_1">
+  <div class="header" id="header_lokacija_1">
     <h1>Lokacije Knjižnica Grada Zagreba</h1>
   </div>
   <div id="map">
