--- a/mapa2_wifi/index2.html
+++ b/mapa2_wifi/index2.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="head" id="head_lokacija_2">
+  <div class="header" id="header_lokacija_2">
     <h1>Bestplatan WIFI Grada Zagreba</h1>
   </div>
   <div id="map">
