--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="head">
+  <div class="header">
     <h1>Odaberite jednu od opcija!</h1>
   </div>
   <div id="map">
