--- a/mapa3_bike/index3.html
+++ b/mapa3_bike/index3.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="head" id="head_lokacija_3">
+  <div class="header" id="header_lokacija_3">
     <h1>Parking Za Bicikle Grada Zagreba</h1>
   </div>
   <div id="map">
