--- a/mapa4_graf/index4.html
+++ b/mapa4_graf/index4.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="head" id="head_lokacija_4">
+  <div class="header" id="header_lokacija_4">
     <h1>Lokacije Grafita Grada Zagreba</h1>
   </div>
   <div id="map">
