--- a/mapa2_wifi/map2.html
+++ b/mapa2_wifi/map2.html
@@ -19,16 +19,16 @@
   </div>
   <div id="nav">
     <ul>
-      <li><a href="../mapa1_knjiz/index1.html" title="Lokacije Knjižnica Grada Zagreba"><i class="fa-solid fa-book fa-2xl"></i></a></li>
-      <li><a href="index2.html" style="background-color: #00C3FF;" title="Bestplatan WIFI Grada Zagreba"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
-      <li><a href="../mapa3_bike/index3.html" title="Parking Za Bicikle Grada Zagreba"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
-      <li><a href="../mapa4_graf/index4.html" title="Lokacije Grafita Grada Zagreba"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
+      <li><a href="../mapa1_knjiz/map1.html" title="Lokacije Knjižnica Grada Zagreba"><i class="fa-solid fa-book fa-2xl"></i></a></li>
+      <li><a href="map2.html" style="background-color: #00C3FF;" title="Bestplatan WIFI Grada Zagreba"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
+      <li><a href="../mapa3_bike/map3.html" title="Parking Za Bicikle Grada Zagreba"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
+      <li><a href="../mapa4_graf/map4.html" title="Lokacije Grafita Grada Zagreba"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
     </ul>
   </div>
 </body>
 <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuCPSHT2VD5qiKl2YV1kGWH2bMqZRQaZQ&callback=initMap&v=weekly"
-  defer></script>
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuCPSHT2VD5qiKl2YV1kGWH2bMqZRQaZQ&callback=initMap&v=weekly" defer>
+</script>
 <script src="script2.js"></script>
 
 </html>
