--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lokacije</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <script src="https://kit.fontawesome.com/1c5108fa97.js" crossorigin="anonymous"></script>
 </head>
 
@@ -19,10 +19,10 @@
   </div>
   <div id="nav">
     <ul>
-      <li><a href="mapa1_knjiz/index1.html"><i class="fa-solid fa-book fa-2xl"></i></a></li>
-      <li><a href="mapa2_wifi/index2.html"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
-      <li><a href="mapa3_bike/index3.html"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
-      <li><a href="mapa4_graf/index4.html"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
+      <li><a href="mapa1_knjiz/map1.html"><i class="fa-solid fa-book fa-2xl"></i></a></li>
+      <li><a href="mapa2_wifi/map2.html"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
+      <li><a href="mapa3_bike/map3.html"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
+      <li><a href="mapa4_graf/map4.html"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
     </ul>
   </div>
 </body>
