--- a/mapa4_graf/map4.html
+++ b/mapa4_graf/map4.html
@@ -19,16 +19,16 @@
   </div>
   <div id="nav">
     <ul>
-      <li><a href="../mapa1_knjiz/index1.html" title="Lokacije Knjižnica Grada Zagreba" ><i class="fa-solid fa-book fa-2xl"></i></a></li>
-      <li><a href="../mapa2_wifi/index2.html" title="Bestplatan WIFI Grada Zagreba"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
-      <li><a href="../mapa3_bike/index3.html" title="Parking Za Bicikle Grada Zagreba"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
-      <li><a href="index4.html" style="background-color: #FFCF1D;" title="Lokacije Grafita Grada Zagreba"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
+      <li><a href="../mapa1_knjiz/map1.html" title="Lokacije Knjižnica Grada Zagreba"><i class="fa-solid fa-book fa-2xl"></i></a></li>
+      <li><a href="../mapa2_wifi/map2.html" title="Bestplatan WIFI Grada Zagreba"><i class="fa-solid fa-wifi fa-2xl"></i></a></li>
+      <li><a href="../mapa3_bike/map3.html" title="Parking Za Bicikle Grada Zagreba"><i class="fa-solid fa-person-biking fa-2xl"></i></a></li>
+      <li><a href="map4.html" style="background-color: #FFCF1D;" title="Lokacije Grafita Grada Zagreba"><i class="fa-solid fa-spray-can fa-2xl"></i></a></li>
     </ul>
   </div>
 </body>
 <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuCPSHT2VD5qiKl2YV1kGWH2bMqZRQaZQ&callback=initMap&v=weekly"
-  defer></script>
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuCPSHT2VD5qiKl2YV1kGWH2bMqZRQaZQ&callback=initMap&v=weekly" defer>
+</script>
 <script src="script4.js"></script>
 
 </html>
